Findbugs fixes
svn path=/trunk/; revision=45937


Former-commit-id: 805053465f4ccac635df7976ac5ef562d8421eb5